test/e2e/testdata/cors.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cors-example
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-cors
    namespace: gateway-conformance-infra
  cors:
    allowOrigins:
    - type: Exact
      value: "https://www.foo.com"
    - type: Exact
      value: "https://www.bar.com"
    - type: RegularExpression
      value: "https://[a-zA-Z0-9]+.foobar.com"
    allowMethods:
    - GET
    - POST
    - PUT
    - PATCH
    - DELETE
    - OPTIONS
    allowHeaders:
    - "x-header-1"
    - "x-header-2"
    exposeHeaders:
    - "x-header-3"
    - "x-header-4"
  jwt:   # Make sure cors is not affected by jwt https://github.com/envoyproxy/gateway/issues/2312
    providers:
    - name: example
      remoteJWKS:
        uri: https://raw.githubusercontent.com/envoyproxy/gateway/main/examples/kubernetes/jwt/jwks.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-cors
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cors
    backendRefs:
    - name: infra-backend-v1
      port: 8080
